--- a/index.ipynb
+++ b/index.ipynb
@@ -297,8 +297,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "text_values = []\n",
-    "bar_trace_first_three_pops = {'type': 'scatter', 'text': text_values}"
+    "trace_first_three_pops = {'x': x_values, 'y': y_values}"
    ]
   },
   {
