Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -297,7 +297,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bar_trace_first_three_pops = {'type':L'x': x_values, 'y': y_values}"
+    "bar_trace_first_three_pops = {'type':'bar':'x': x_values, 'y': y_values}"
    ]
   },
   {
