--- a/index.ipynb
+++ b/index.ipynb
@@ -297,7 +297,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bar_trace_first_three_pops = {'type':'bar':'x': x_values, 'y': y_values}"
+    "bar_trace_first_three_pops = {'type':'bar':'x': x_values, 'y': y_values}\n",
+    "\n"
    ]
   },
   {
