--- a/index.ipynb
+++ b/index.ipynb
@@ -293,12 +293,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-11-dfe36818250a>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-dfe36818250a>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    bar_trace_first_three_pops = {'type':'bar':'x': x_values, 'y': y_values}\u001b[0m\n\u001b[0m                                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "bar_trace_first_three_pops = {'type':'bar':'x': x_values, 'y': y_values}\n",
-    "\n"
+    "plotly.offline.iplot([bar_trace_first_three_pops])\n"
    ]
   },
   {
