Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -329,7 +329,7 @@
     }
    ],
    "source": [
-    "bar_trace_first_three_pops = {'type':'bar','x': x_values, 'y': y_values,'text':[''po]}\n",
+    "bar_trace_first_three_pops = {'type':'bar','x': x_values, 'y': y_values,'text':['pop1','pop2']}\n",
     "plotly.offline.iplot([bar_trace_first_three_pops])\n"
    ]
   },
