Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -301,8 +301,13 @@
       "application/vnd.plotly.v1+json": {
        "data": [
         {
+         "text": [
+          "pop1",
+          "pop2",
+          "pop3"
+         ],
          "type": "bar",
-         "uid": "fb667644-0a11-11e9-99e6-03de2535100c",
+         "uid": "1457935e-0a12-11e9-99e6-03de2535100c",
          "x": [
           "Buenos Aires",
           "Toronto",
@@ -318,10 +323,10 @@
        "layout": {}
       },
       "text/html": [
-       "<div id=\"3d3632bc-e78d-449a-8f05-63579c67e7bb\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"3d3632bc-e78d-449a-8f05-63579c67e7bb\", [{\"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"bar\", \"uid\": \"fb6a0a70-0a11-11e9-99e6-03de2535100c\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"d38d5e71-21e0-4ba4-9a1f-a461e305a4b7\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"d38d5e71-21e0-4ba4-9a1f-a461e305a4b7\", [{\"text\": [\"pop1\", \"pop2\", \"pop3\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"bar\", \"uid\": \"145b6b50-0a12-11e9-99e6-03de2535100c\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"3d3632bc-e78d-449a-8f05-63579c67e7bb\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"3d3632bc-e78d-449a-8f05-63579c67e7bb\", [{\"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"bar\", \"uid\": \"fb6a0a70-0a11-11e9-99e6-03de2535100c\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"d38d5e71-21e0-4ba4-9a1f-a461e305a4b7\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"d38d5e71-21e0-4ba4-9a1f-a461e305a4b7\", [{\"text\": [\"pop1\", \"pop2\", \"pop3\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"bar\", \"uid\": \"145b6b50-0a12-11e9-99e6-03de2535100c\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
@@ -329,7 +334,7 @@
     }
    ],
    "source": [
-    "bar_trace_first_three_pops = {'type':'bar','x': x_values, 'y': y_values,'text':['pop1','pop2']}\n",
+    "bar_trace_first_three_pops = {'type':'bar','x': x_values, 'y': y_values,'text':['pop1','pop2','pop3']}\n",
     "plotly.offline.iplot([bar_trace_first_three_pops])\n"
    ]
   },
