Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -340,16 +340,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'scatter'"
+       "'bar'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -368,18 +368,32 @@
       "application/vnd.plotly.v1+json": {
        "data": [
         {
-         "text": [],
-         "type": "scatter",
-         "uid": "6d5dd36a-0a11-11e9-99e6-03de2535100c"
+         "text": [
+          "pop1",
+          "pop2",
+          "pop3"
+         ],
+         "type": "bar",
+         "uid": "1f075f0a-0a12-11e9-99e6-03de2535100c",
+         "x": [
+          "Buenos Aires",
+          "Toronto",
+          "Pyeongchang"
+         ],
+         "y": [
+          2891000,
+          2800000,
+          2581000
+         ]
         }
        ],
        "layout": {}
       },
       "text/html": [
-       "<div id=\"9279f082-e253-4af5-9fa7-70fe88023821\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"9279f082-e253-4af5-9fa7-70fe88023821\", [{\"text\": [], \"type\": \"scatter\", \"uid\": \"6d635704-0a11-11e9-99e6-03de2535100c\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"a9e96d62-4e37-498f-b878-c96c3c6c834d\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"a9e96d62-4e37-498f-b878-c96c3c6c834d\", [{\"text\": [\"pop1\", \"pop2\", \"pop3\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"bar\", \"uid\": \"1f0b1a50-0a12-11e9-99e6-03de2535100c\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"9279f082-e253-4af5-9fa7-70fe88023821\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"9279f082-e253-4af5-9fa7-70fe88023821\", [{\"text\": [], \"type\": \"scatter\", \"uid\": \"6d635704-0a11-11e9-99e6-03de2535100c\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"a9e96d62-4e37-498f-b878-c96c3c6c834d\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"a9e96d62-4e37-498f-b878-c96c3c6c834d\", [{\"text\": [\"pop1\", \"pop2\", \"pop3\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"bar\", \"uid\": \"1f0b1a50-0a12-11e9-99e6-03de2535100c\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
