--- a/index.ipynb
+++ b/index.ipynb
@@ -423,7 +423,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "bar_trace_first_three_areas = {'type':'bar','x': x_values, 'y': y_values,'text':['pop1','pop2','pop3']}"
+   ]
   },
   {
    "cell_type": "code",
