--- a/index.ipynb
+++ b/index.ipynb
@@ -424,6 +424,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "x_values=[]\n",
     "bar_trace_first_three_areas = {'type':'bar','x': x_values, 'y': y_values,'text':['pop1','pop2','pop3']}"
    ]
   },
