--- a/index.ipynb
+++ b/index.ipynb
@@ -424,7 +424,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_values=[]\n",
+    "x_values=\n",
+    "va_values=\n",
     "bar_trace_first_three_areas = {'type':'bar','x': x_values, 'y': y_values,'text':['pop1','pop2','pop3']}"
    ]
   },
