--- a/index.ipynb
+++ b/index.ipynb
@@ -425,7 +425,7 @@
    "outputs": [],
    "source": [
     "x_values = [cities[0]['City'], cities[1]['City'], cities[2]['City']]\n",
-    "y_values = [cities[0]['City'], cities[1]['City'], cities[2]['City']]\n",
+    "y_values = [cities[0]['Populat'], cities[1]['City'], cities[2]['City']]\n",
     "bar_trace_first_three_areas = {'type':'bar','x': x_values, 'y': y_values,'text':['pop1','pop2','pop3']}"
    ]
   },
