--- a/index.ipynb
+++ b/index.ipynb
@@ -426,7 +426,7 @@
    "source": [
     "x_values = [cities[0]['City'], cities[1]['City'], cities[2]['City']]\n",
     "y_values = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
-    "bar_trace_first_three_areas = {'type':'bar','x': x_values, 'y': y_values,'text':['pop1','pop2','pop3']}"
+    "bar_trace_first_three_areas = {'type':'bar','x': x_values, 'y': y_values,'text':['area1','area2','area3']}"
    ]
   },
   {
