Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -420,13 +420,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4758, 2731571, 3194]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x_values = [cities[0]['City'], cities[1]['City'], cities[2]['City']]\n",
     "y_values = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
-    "bar_trace_first_three_areas = {'type':'bar','x': x_values, 'y': y_values,'text':['area1','area2','area3']}"
+    "bar_trace_first_three_areas = {'type':'bar','x': x_values, 'y': y_values,'text':['area1','area2','area3']}\n",
+    "y_values"
    ]
   },
   {
