Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
        "[4758, 2731571, 3194]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,13 +437,13 @@
    "source": [
     "x_values = [cities[0]['City'], cities[1]['City'], cities[2]['City']]\n",
     "y_values = [cities[0]['Area'], cities[1]['Area'], cities[2]['Area']]\n",
-    "bar_trace_first_three_areas = {,'x': x_values, 'y': y_values,'text':['area1','area2','area3']}\n",
+    "bar_trace_first_three_areas = {'x': x_values, 'y': y_values,'text':['area1','area2','area3']}\n",
     "y_values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +457,7 @@
           "pop3"
          ],
          "type": "bar",
-         "uid": "b192bc3e-0a12-11e9-99e6-03de2535100c",
+         "uid": "ba6db228-0a12-11e9-99e6-03de2535100c",
          "x": [
           "Buenos Aires",
           "Toronto",
@@ -475,8 +475,8 @@
           "area2",
           "area3"
          ],
-         "type": "bar",
-         "uid": "b192be6e-0a12-11e9-99e6-03de2535100c",
+         "type": "scatter",
+         "uid": "ba6db520-0a12-11e9-99e6-03de2535100c",
          "x": [
           "Buenos Aires",
           "Toronto",
@@ -492,10 +492,10 @@
        "layout": {}
       },
       "text/html": [
-       "<div id=\"f94c9b08-9d97-411e-b09b-7fc9f8d79677\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"f94c9b08-9d97-411e-b09b-7fc9f8d79677\", [{\"text\": [\"pop1\", \"pop2\", \"pop3\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"bar\", \"uid\": \"b19752ee-0a12-11e9-99e6-03de2535100c\"}, {\"text\": [\"area1\", \"area2\", \"area3\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [4758, 2731571, 3194], \"type\": \"bar\", \"uid\": \"b19754b0-0a12-11e9-99e6-03de2535100c\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"391ec18d-e0ab-4427-bda7-6df5280eeea4\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"391ec18d-e0ab-4427-bda7-6df5280eeea4\", [{\"text\": [\"pop1\", \"pop2\", \"pop3\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"bar\", \"uid\": \"ba814248-0a12-11e9-99e6-03de2535100c\"}, {\"text\": [\"area1\", \"area2\", \"area3\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [4758, 2731571, 3194], \"type\": \"scatter\", \"uid\": \"ba814400-0a12-11e9-99e6-03de2535100c\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"f94c9b08-9d97-411e-b09b-7fc9f8d79677\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"f94c9b08-9d97-411e-b09b-7fc9f8d79677\", [{\"text\": [\"pop1\", \"pop2\", \"pop3\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"bar\", \"uid\": \"b19752ee-0a12-11e9-99e6-03de2535100c\"}, {\"text\": [\"area1\", \"area2\", \"area3\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [4758, 2731571, 3194], \"type\": \"bar\", \"uid\": \"b19754b0-0a12-11e9-99e6-03de2535100c\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"391ec18d-e0ab-4427-bda7-6df5280eeea4\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"391ec18d-e0ab-4427-bda7-6df5280eeea4\", [{\"text\": [\"pop1\", \"pop2\", \"pop3\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [2891000, 2800000, 2581000], \"type\": \"bar\", \"uid\": \"ba814248-0a12-11e9-99e6-03de2535100c\"}, {\"text\": [\"area1\", \"area2\", \"area3\"], \"x\": [\"Buenos Aires\", \"Toronto\", \"Pyeongchang\"], \"y\": [4758, 2731571, 3194], \"type\": \"scatter\", \"uid\": \"ba814400-0a12-11e9-99e6-03de2535100c\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
